图像上传改为异步
图像上传改为异步

--- a/WebPACS/Capture.html
+++ b/WebPACS/Capture.html
@@ -225,7 +225,7 @@
             type: "POST",
             data: formData,
             contentType: false,
-            async: false,
+            async: true,
             processData: false,
             success: function (data) {
                 callback(data);
