--- a/WebPACS/list.html
+++ b/WebPACS/list.html
@@ -59,7 +59,7 @@
         var products = [];
         var table = null;
 
-       // setInterval(add, 5000);
+        setInterval(add, 2000);
         function add() {
             $.getJSON("patients1000.json", function (jsonobj) {
                 products = jsonobj;
